--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="/static/css/common/all.css">
 <link rel="stylesheet" href="/static/css/accounts/login.css">
 
-<div id="login" class="zuzu__container">
+<div id="login" class="zuzu__container" style="max-width: 700px; margin-top: 200px;">
     <div id="login__form">
         <div id="login__form__title">로그인</div>
         <div id="login__form__input">
