--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="/static/css/common/all.css">
 <link rel="stylesheet" href="/static/css/accounts/register.css">
 
-<div id="register" class="zuzu__container">
+<div id="register" class="zuzu__container" style="max-width: 700px; margin-top: 150px;">
 
     <div id="register__title">회원 가입</div>
     <div id="register__form">
