--- a/static/css/common/header.scss
+++ b/static/css/common/header.scss
@@ -1,12 +1,15 @@
 @import "_settings.scss";
 
 #header{
+    position: fixed;
+    top: 0;
     display: flex;
     width: 100vw;
     max-width:100%;
     height: 7vh;
     background-color: white;
-    box-shadow: #{$box-shadow-light}
+    box-shadow: #{$box-shadow-light};
+    z-index: 5;
    
 }
 
@@ -33,9 +36,8 @@
 
 #header__logo{
     display: flex;
-    justify-content: center;
     align-items: center;
-    width: 200px;
+    width: 40%;
     height: 100%;
     font-size: 2rem;
     color: #225596;
