--- a/static/css/posts/board.scss
+++ b/static/css/posts/board.scss
@@ -5,28 +5,27 @@
     height: 1800px;
     margin: 0 auto;
     margin-top: 10vh;
-    background-color: lightskyblue;
+
 }
 
 #board__filter {
     position: fixed;
     width: 400px;
     height: 800px;
-    padding: 0;
+    padding: 0 10px;
+    overflow-y: auto;
 }
 
 #board__content {
     width: 65%;
-    margin-left: 500px;
-    background-color: lightsalmon;
+    margin-left: 450px;
 }
 
 /*  */
 
 #board__filter__title{
     display: flex;
-    width: 80%;
-    margin: 0 auto;
+    justify-content: center;
     align-items: center;
     color: #22304f;
     font-size: 1.5rem;
@@ -34,14 +33,16 @@
 }
 
 
+/*  */
+
 #board__filter__search {
     display: flex;
     align-items: center;
     padding: 10px;
-    width: 95%;
+    width: 80%;
+    margin: 0 auto;
     border-radius: 0.25rem;
     height: 7%;
-    margin: 0 auto;
     color: #AFB4C2;
     background-color: #e9ecf2;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -57,4 +58,159 @@
 
 #board__filter__search__icon {
     margin: 0 0 0 auto;
+}
+
+/*  */
+
+.board__filter__checkbox{
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 80px;
+    /* background-color: lightpink; */
+}
+
+#board__filter__checkbox__title{
+    display: flex;
+    width: 100%;
+    margin: 20px auto;
+    align-items: center;
+}
+
+#board__filter__checkbox__title__icon{
+    color: #44576F;
+    margin: 0 0 0 auto;
+}
+
+.board__filter__checkbox__item{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin: 20px 0;
+}
+
+.board__filter__checkbox__item__checkbox{
+
+}
+
+.board__filter__checkbox__item__text{
+    margin: 0 10px;
+}
+
+.board__filter__checkbox__item__amount{
+    margin: 0 0 0 auto;
+    padding: 5px;
+    font-size: 0.7rem;
+    color: #44576F;
+    background-color: #EAEDF5;
+    border-radius: 0.4rem;
+    box-shadow:  0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.board__filter__checkbox__item__amount__checked{
+    color: #4678F8;
+    background-color: #E5EEFB;
+}
+
+
+
+/*  */
+
+
+
+
+
+.board__content__item{
+    display: flex;
+    width: 90%;
+    height: 200px;
+    margin:  0 auto;
+    margin-bottom: 20px;
+    padding: 0 2.5%;
+    box-shadow:  0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    border: 1px solid lightgrey;
+    border-radius: 0.3rem;
+}
+
+/*  */
+
+.board__content__item__head{
+    display: flex;
+    align-items: center;
+    width: 20%;
+    height: 100%;
+    /* background-color: lightpink; */
+}
+
+.board__content__item__head__img{
+    width: 100%;
+    height: 70%;
+}
+
+/*  */
+
+
+.board__content__item__body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 55%;
+    height: 100%;
+    padding: 0 5%;
+    color: #22304f;
+}
+
+.board__content__item__body__company{
+    font-size: 1.25rem;
+    font-weight: 900;
+    height: 20%;
+}
+
+.board__content__item__body__position{
+    height: 20%;
+}
+
+.board__content__item__body__location{
+    color: #7f7f89;
+    height: 20%;
+}
+
+.board__content__item__body__filter{
+    display: flex;
+    height: 20%;
+}
+
+.board__content__item__body__filter__item{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 5px;
+    padding: 10px;
+    color: #7f7f89;
+    background-color: #E9ECF0;
+    border-radius: 0.3rem;
+    box-shadow:  0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+/*  */
+.board__content__item__tail{
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    height: 100%;
+}
+
+.board__content__item__tail__salary{
+    display: flex;
+    justify-content: center;
+    margin-top: 35%;
+    font-size: 1.25rem;
+    color: #225596;
+    font-weight: 900;
+}
+
+.board__content__item__tail__deadline{
+    margin: auto 0 0 auto;
+    padding: 10%;
+    color: #7f7f89;
 }
