--- a/templates/posts/board.html
+++ b/templates/posts/board.html
@@ -9,13 +9,142 @@
     <div id="board__filter" class="zuzu__container">
 
 
-        <div id="board__filter__title">Filter</div>
+        <div id="board__filter__title">원하는 정보를 찾아보세요.</div>
         <div id="board__filter__search">
             <input id="board__filter__search__input" type="text">
             <div id="board__filter__search__icon"><i class="fas fa-search"></i></div>
         </div>
+        <div class="board__filter__checkbox">
+            <div id="board__filter__checkbox__title">
+                <div id="board__filter__checkbox__title__text">프로그래밍 언어</div>
+                <div id="board__filter__checkbox__title__icon"><i class="fas fa-chevron-down"></i></div>
+            </div>
+            <div class="board__filter__checkbox__item">
+                <div class="board__filter__checkbox__item__checkbox zuzu__checkbox zuzu__checkbox__checked">
+                    <i class="fas fa-check"></i>
+                </div>
+                <div class="board__filter__checkbox__item__text">python</div>
+                <div class="board__filter__checkbox__item__amount board__filter__checkbox__item__amount__checked">
+                    37
+                </div>
+            </div>
+            <div class="board__filter__checkbox__item">
+                <div class="board__filter__checkbox__item__checkbox zuzu__checkbox zuzu__checkbox__checked">
+                    <i class="fas fa-check"></i>
+                </div>
+                <div class="board__filter__checkbox__item__text">java</div>
+                <div class="board__filter__checkbox__item__amount board__filter__checkbox__item__amount__checked">
+                    167
+                </div>
+            </div>
+            <div class="board__filter__checkbox__item">
+                <div class="board__filter__checkbox__item__checkbox zuzu__checkbox zuzu__checkbox__checked">
+                    <i class="fas fa-check"></i>
+                </div>
+                <div class="board__filter__checkbox__item__text">javascript</div>
+                <div class="board__filter__checkbox__item__amount board__filter__checkbox__item__amount__checked">
+                    112
+                </div>
+            </div>
+            <div class="board__filter__checkbox__item">
+                <div class="board__filter__checkbox__item__checkbox zuzu__checkbox zuzu__checkbox__checked">
+                    <i class="fas fa-check"></i>
+                </div>
+                <div class="board__filter__checkbox__item__text">c++</div>
+                <div class="board__filter__checkbox__item__amount board__filter__checkbox__item__amount__checked">
+                    20
+                </div>
+            </div>
+        </div>
+
+        <div class="board__filter__checkbox">
+            <div id="board__filter__checkbox__title">
+                <div id="board__filter__checkbox__title__text">경력</div>
+                <div id="board__filter__checkbox__title__icon"><i class="fas fa-chevron-down"></i></div>
+            </div>
+            <div class="board__filter__checkbox__item">
+                <div class="board__filter__checkbox__item__checkbox zuzu__checkbox zuzu__checkbox__checked">
+                    <i class="fas fa-check"></i>
+                </div>
+                <div class="board__filter__checkbox__item__text">신입</div>
+                <div class="board__filter__checkbox__item__amount board__filter__checkbox__item__amount__checked">
+                    51
+                </div>
+            </div>
+            <div class="board__filter__checkbox__item">
+                <div class="board__filter__checkbox__item__checkbox zuzu__checkbox zuzu__checkbox__checked">
+                    <i class="fas fa-check"></i>
+                </div>
+                <div class="board__filter__checkbox__item__text">경력</div>
+                <div class="board__filter__checkbox__item__amount board__filter__checkbox__item__amount__checked">
+                    285
+                </div>
+            </div>
+        </div>
+
+
     </div>
-    <div id="board__content" class="zuzu__container">asdasd</div>
+    <div id="board__content" class="zuzu__container">
+
+        <div class="board__content__item">
+            <div class="board__content__item__head">
+                <img class="board__content__item__head__img" src="/static/img/logo/logo_2.png" alt="" srcset="">
+            </div>
+            <div class="board__content__item__body">
+                <div class="board__content__item__body__company">퓨처 컴퍼니</div>
+                <div class="board__content__item__body__position">서버 백엔드 엔지니어</div>
+                <div class="board__content__item__body__location">경기도 성남시 분당구</div>
+                <div class="board__content__item__body__filter">
+                    <div class="board__content__item__body__filter__item">경력</div>
+                    <div class="board__content__item__body__filter__item">java</div>
+                </div>
+            </div>
+            <div class="board__content__item__tail">
+                <div class="board__content__item__tail__salary">3500 ~ 3700 만원</div>
+                <div class="board__content__item__tail__deadline">~ 02 / 27</div>
+            </div>
+        </div>
+
+        <div class="board__content__item">
+            <div class="board__content__item__head">
+                <img class="board__content__item__head__img" src="/static/img/logo/logo_1.png" alt="" srcset="">
+            </div>
+            <div class="board__content__item__body">
+                <div class="board__content__item__body__company">투게더 컴퍼니</div>
+                <div class="board__content__item__body__position">AI 개발자</div>
+                <div class="board__content__item__body__location">서울특별시 강남구</div>
+                <div class="board__content__item__body__filter">
+                    <div class="board__content__item__body__filter__item">경력</div>
+                    <div class="board__content__item__body__filter__item">python</div>
+                </div>
+            </div>
+            <div class="board__content__item__tail">
+                <div class="board__content__item__tail__salary">4200 ~ 4300 만원</div>
+                <div class="board__content__item__tail__deadline">~ 03 / 11</div>
+            </div>
+        </div>
+
+        <div class="board__content__item">
+            <div class="board__content__item__head">
+                <img class="board__content__item__head__img" src="/static/img/logo/logo_3.png" alt="" srcset="">
+            </div>
+            <div class="board__content__item__body">
+                <div class="board__content__item__body__company">하와이 컴퍼니</div>
+                <div class="board__content__item__body__position">웹 프론트엔드 개발자</div>
+                <div class="board__content__item__body__location">제주특별자치도 서귀포구</div>
+                <div class="board__content__item__body__filter">
+                    <div class="board__content__item__body__filter__item">신입</div>
+                    <div class="board__content__item__body__filter__item">javascript</div>
+                </div>
+            </div>
+            <div class="board__content__item__tail">
+                <div class="board__content__item__tail__salary">2200 ~ 2500 만원</div>
+                <div class="board__content__item__tail__deadline">~ 02/13 </div>
+            </div>
+        </div>
+
+
+    </div>
 </div>
 
 
